--- a/backend/package.json
+++ b/backend/package.json
@@ -4,6 +4,7 @@
   "description": "",
   "main": "server.js",
   "dependencies": {
+    "'": "github:1inch/limit-order-protocol",
     "app-root-path": "^3.0.0",
     "axios": "^0.21.1",
     "body-parser": "^1.19.0",
@@ -12,7 +13,8 @@
     "moment": "^2.29.1",
     "mongoose": "^5.12.2",
     "nodemon": "^2.0.7",
-    "uuid": "^8.3.2"
+    "uuid": "^8.3.2",
+    "web3": "^1.3.6"
   },
   "devDependencies": {},
   "scripts": {
